--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-name: ConstantsLookup
+name: MinecraftUniversity
 version: '${project.version}'
 main: me.thevipershow.minecraftuniversity.MinecraftUniversity
 api-version: '1.20'
