--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,9 @@
 name: MinecraftUniversity
 version: '${project.version}'
 main: me.thevipershow.minecraftuniversity.MinecraftUniversity
-api-version: '1.20'
+api-version: '1.13'
 authors: [CMarco_, TheViperShow]
 description: Look up every constant of the world, from Math to Minecraft!
+commands:
+  constants:
+    description: 'Main command to browse constants'
